--- a/include examples/kennzahlen_einbaucode_it.html
+++ b/include examples/kennzahlen_einbaucode_it.html
@@ -1,10 +1,7 @@
-<script type="text/javascript" src="/behoerden/gesundheitsdirektion/statistikfachstelle/daten/js/libraries/queue.js"></script>
-<script type="text/javascript" src="/behoerden/gesundheitsdirektion/statistikfachstelle/daten/js/stat_zg_generals.js"></script>
-
 <table class="listing">
 <tbody>
 <tr>
-<td><strong>Ständige Wohnbevölkerung </strong><span id="bevölkerungyear"></span></td>
+<td><strong>abitanti </strong><span id="bevölkerungyear"></span></td>
 <td id="bevölkerung"></td>
 </tr>
 <tr>
@@ -12,23 +9,23 @@
 <td> </td>
 </tr>
 <tr>
-<td><strong>Fläche </strong>in ha</td>
+<td><strong>Superfici del cantone </strong>(ha)</td>
 <td>23'873</td>
 </tr>
 <tr>
-<td>davon: Siedlungsflächen </td>
+<td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;insediamenti </td>
 <td>3'306</td>
 </tr>
 <tr>
-<td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Landwirtschaftsflächen </td>
+<td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;agricoltura </td>
 <td>10'366</td>
 </tr>
 <tr>
-<td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Wald und Gehölze </td>
+<td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;boschi </td>
 <td>6'529</td>
 </tr>
 <tr>
-<td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Zuger- und Ägerisee </td>
+<td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;laghi </td>
 <td>3'172</td>
 </tr>
 <tr>
@@ -36,7 +33,7 @@
 <td> </td>
 </tr>
 <tr>
-<td><strong><a href="http://www.zg.ch/behoerden/gemeinden">Gemeinden</a></strong></td>
+<td><strong><a href="http://www.zg.ch/behoerden/gemeinden">comuni</a></strong></td>
 <td>11</td>
 </tr>
 <tr>
@@ -44,7 +41,7 @@
 <td> </td>
 </tr>
 <tr>
-<td><strong>Höchster Punkt</strong> in m über Meer</td>
+<td><strong>Punto più elevato </strong>al di sopra del livello del mare </td>
 <td>1'580 Wildspitz (Rossberg) </td>
 </tr>
 <tr>
@@ -52,19 +49,19 @@
 <td> </td>
 </tr>
 <tr>
-<td><strong>Wirtschaftsstruktur</strong>, Beschäftigte nach Sektoren <span id="wirtschaftsstrukturyear"></span></td>
+<td><strong>Struttura economica</strong>, occupati per settore <span id="wirtschaftsstrukturyear"></span></td>
 <td> </td>
 </tr>
 <tr>
-<td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Erster Sektor ("Landwirtschaft")</td>
+<td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;settore primario (agricoltura)</td>
 <td><span id="wsabs1"></span> (<span id="wsrel1"></span>)</td>
 </tr>
 <tr>
-<td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Zweiter Sektor ("Industrie")</td>
+<td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;settore secondario (industria)</td>
 <td><span id="wsabs2"></span> (<span id="wsrel2"></span>)</td>
 </tr>
 <tr>
-<td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Dritter Sektor ("Dienstleistungen")</td>
+<td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;settore terziario (servizi)</td>
 <td><span id="wsabs3"></span> (<span id="wsrel3"></span>)</td>
 </tr>
 <tr>
@@ -72,15 +69,15 @@
 <td> </td>
 </tr>
 <tr>
-<td><strong>Beschäftigte </strong><span class="wirtschaftyear"></span></td>
+<td><strong>occupati </strong><span class="wirtschaftyear"></span></td>
 <td><span id="Beschäftigte"></span></td>
 </tr>
 <tr>
-<td><strong>Vollzeitäquivalente </strong><span class="wirtschaftyear"></span></td>
+<td><strong>equivalenti in tempo pieno </strong><span class="wirtschaftyear"></span></td>
 <td><span id="Vollzeitäquivalente"></span></td>
 </tr>
 <tr>
-<td><strong>Betriebe </strong><span class="wirtschaftyear"></span></td>
+<td><strong>aziende </strong><span class="wirtschaftyear"></span></td>
 <td><span id="Betriebe"></span></td>
 </tr>
 <tr>
@@ -88,35 +85,47 @@
 <td> </td>
 </tr>
 <tr>
-<td><strong>Wohnungsbestand </strong><span id="wohnungenyear"></span></td>
+<td><strong>alloggi esistenti / edifici </strong><span id="wohnungenyear"></span></td>
 <td><span id="wohnungen"></span></td>
 </tr>
 </tbody>
 </table>
 
 <script>
-var bevölkerung = dc.numberDisplay("#bevölkerung");
-var bestandwohnungen = dc.numberDisplay("#wohnungen");
-var betriebe = dc.numberDisplay("#betriebe");
-var beschäftigte = dc.numberDisplay("#beschäftigte");
-	
-var q = queue()
-	.defer(d3.csv, "/behoerden/gesundheitsdirektion/statistikfachstelle/daten/gemeindeportrait/result-gemeindeportrait-00.csv")
-	.defer(d3.csv, "/behoerden/gesundheitsdirektion/statistikfachstelle/daten/gemeindeportrait/result-gemeindeportrait-01.csv")
-	.defer(d3.csv, "/behoerden/gesundheitsdirektion/statistikfachstelle/daten/gemeindeportrait/result-gemeindeportrait-02.csv")
-	.defer(d3.csv, "/behoerden/gesundheitsdirektion/statistikfachstelle/daten/gemeindeportrait/result-gemeindeportrait-03.csv")
-	.defer(d3.csv, "/behoerden/gesundheitsdirektion/statistikfachstelle/daten/gemeindeportrait/result-gemeindeportrait-04.csv")
-	.defer(d3.csv, "/behoerden/gesundheitsdirektion/statistikfachstelle/daten/gemeindeportrait/result-gemeindeportrait-05.csv")
-	.defer(d3.csv, "/behoerden/gesundheitsdirektion/statistikfachstelle/daten/gemeindeportrait/result-gemeindeportrait-06.csv")
-	.defer(d3.csv, "/behoerden/gesundheitsdirektion/statistikfachstelle/daten/gemeindeportrait/result-gemeindeportrait-07.csv")
-	.defer(d3.csv, "/behoerden/gesundheitsdirektion/statistikfachstelle/daten/gemeindeportrait/result-gemeindeportrait-08.csv")
-	.defer(d3.csv, "/behoerden/gesundheitsdirektion/statistikfachstelle/daten/gemeindeportrait/result-gemeindeportrait-09.csv")
-	.defer(d3.csv, "/behoerden/gesundheitsdirektion/statistikfachstelle/daten/gemeindeportrait/result-gemeindeportrait-10.csv");
+
+require.config({
+	urlArgs: "bust=" + (new Date()).getTime(),
+	baseUrl: '/behoerden/gesundheitsdirektion/statistikfachstelle/daten/js/',
+	paths: {
+		libs: "libraries",
+		"d3queue":"libraries/queue",
+		"dc": "libraries/dc"
+	}
+});
+
+require(['stat_zg_generals','dc','d3queue'], function(generals,dc,queue){
+
+	var bevölkerung = dc.numberDisplay("#bevölkerung");
+	var bestandwohnungen = dc.numberDisplay("#wohnungen");
+	var betriebe = dc.numberDisplay("#betriebe");
+	var beschäftigte = dc.numberDisplay("#beschäftigte");
+		
+	var q = queue.queue()
+		.defer(d3.csv, "/behoerden/gesundheitsdirektion/statistikfachstelle/daten/gemeindeportrait/result-gemeindeportrait-00.csv")
+		.defer(d3.csv, "/behoerden/gesundheitsdirektion/statistikfachstelle/daten/gemeindeportrait/result-gemeindeportrait-01.csv")
+		.defer(d3.csv, "/behoerden/gesundheitsdirektion/statistikfachstelle/daten/gemeindeportrait/result-gemeindeportrait-02.csv")
+		.defer(d3.csv, "/behoerden/gesundheitsdirektion/statistikfachstelle/daten/gemeindeportrait/result-gemeindeportrait-03.csv")
+		.defer(d3.csv, "/behoerden/gesundheitsdirektion/statistikfachstelle/daten/gemeindeportrait/result-gemeindeportrait-04.csv")
+		.defer(d3.csv, "/behoerden/gesundheitsdirektion/statistikfachstelle/daten/gemeindeportrait/result-gemeindeportrait-05.csv")
+		.defer(d3.csv, "/behoerden/gesundheitsdirektion/statistikfachstelle/daten/gemeindeportrait/result-gemeindeportrait-06.csv")
+		.defer(d3.csv, "/behoerden/gesundheitsdirektion/statistikfachstelle/daten/gemeindeportrait/result-gemeindeportrait-07.csv")
+		.defer(d3.csv, "/behoerden/gesundheitsdirektion/statistikfachstelle/daten/gemeindeportrait/result-gemeindeportrait-08.csv")
+		.defer(d3.csv, "/behoerden/gesundheitsdirektion/statistikfachstelle/daten/gemeindeportrait/result-gemeindeportrait-09.csv")
+		.defer(d3.csv, "/behoerden/gesundheitsdirektion/statistikfachstelle/daten/gemeindeportrait/result-gemeindeportrait-10.csv");
 
 	q.await(function(error, data0, data1, data2, data3, data4, data5, data6, data7, data8, data9, data10) {
-		
+			
 		if (error) throw error;
-
 		//Metadaten auslesen und Daten berechnen.
 		meta1 = data1.filter(function(el) {
 			return el["Meta"] == 1
@@ -136,7 +145,6 @@ var q = queue()
         });
 		
 		$("#bevölkerung").html(germanFormatters.numberFormat(",")(tots1));
-
 		meta3 = data3.filter(function(el) {
 			return el["Meta"] == 1
 		});
@@ -216,5 +224,5 @@ var q = queue()
 		$("#wsrel3").html(germanFormatters.numberFormat(",.1%")((data110.filter(function(d, i) {return d.key == "Dienstleistung"})[0].values)/tots10));
 
 	})
-
+})
 </script>
